Working on the distributed doc

--- a/latex/all_usepackages.tex
+++ b/latex/all_usepackages.tex
@@ -36,6 +36,7 @@
 \usepackage{arydshln}
 \usepackage{multirow}
 \usepackage{multicol}
+\usepackage[section]{placeins}
 
 \input{macros/macros.tex}
 \input{macros/authnote_macros.tex}
