--- a/latex/iteration2.tex
+++ b/latex/iteration2.tex
@@ -61,12 +61,12 @@
 %\include{related_work}
 \include{rbffd_method}
 \include{distributed_solver}
-\include{ViennaCL.tex}
-\include{future_of_gpus.tex}
+\include{ViennaCL}
+\include{future_of_gpus}
 
 
-\include{explicit_pde_solutions}
-\include{implicit_pde_solutions}
+%\include{explicit_pde_solutions}
+%\include{implicit_pde_solutions}
 
 \include{chapter3/distributed_solvers}
 
