--- a/latex/ViennaCL.tex
+++ b/latex/ViennaCL.tex
@@ -1,3 +1,4 @@
+
 \makeatletter
 \@ifundefined{standalonetrue}{\newif\ifstandalone}{}
 \@ifundefined{section}{\standalonetrue}{\standalonefalse}
@@ -6,9 +7,11 @@
 \documentclass{report}
 
 \input{all_usepackages} 
+\usepackage[margin=1.25in]{geometry}
 
 \begin{document}
 \fi
+
 
 
 \chapter{ViennaCL}
