--- a/latex/distributed_solver.tex
+++ b/latex/distributed_solver.tex
@@ -26,8 +26,34 @@ OpenCL is chosen with the future in mind. Hardware changes rapidly and vendors o
 \subsection{Hardware Layout}
 Modern GPUs have a memory hierarchy and hardware layout. 
 
+\section{Performance}
+\subsection{GFLOP Throughput}
+In order to quantify the performance of our implementation, we can measure two
+factors. First, we can check the speedup achieved on the GPU relative to the
+CPU to get an idea of how much return of investment is to be expected by all
+the effort in porting the application to the GPU. Speedup is measured as the
+time to execute on the CPU divided by the time to execute on the GPU. 
+
+The second quantification is to check the throughput of the process. By
+quantifying the GFLOP throughput we have a measure that tells us two things:
+first, a concrete number quantifying the amount of work performed per second by
+either hardware, and second because we can calculate the peak throughput possible on
+each hardware, we also have a measure of how occupied our CPU/GPU units are.
+With the GFLOPs we can also determine the cost per watt for computation and
+conclude on what problem sizes the GPU is cost effective to target and use. 
+
+Now, as we parallelize across multiple GPUs, these same numbers can come into
+play. However we are also interested in the efficiency. Efficiency is the
+speedup divided by the number of processors. With efficiency we have a measure
+of how well-utilized processors are as we scale either the problem size (weak)
+or the number of processors (strong). As the efficiency diminishes we can
+conclude on how many stencils/nodes per processor will keep our processors
+occupied balanced with the shortest compute time possible (i.e., we are
+maximizing return of investment). 
+
 \subsection{Expectations in Performance}
 Many GPU applications claim a 50x or higher speedup. This will never be the case for RBF-FD for the simple reason that the method reduces to an SpMV. The SpMV is a low computational complexity operation with only two operations for every one memory load. 
+
 
 \section{Targeting the GPU}
 
@@ -41,6 +67,81 @@ Many GPU applications claim a 50x or higher speedup. This will never be the case
 
 Our assumption with RBF-FD in this manuscript is that all stencils will have equal size. Due to this, the ELL format is preferred as the default. 
  
+
+
+\chapter{A Distributed Multi-GPU RBF-FD Implementation}
+\label{chap:rbffd_multi_gpu}
+
+%\authnote{Related work for start of Parallel/GPU chapter}
+Parallel implementations of RBF methods rely on domain decomposition. Depending on the implementation, domain decomposition not only accelerates solution procedures, but can decrease the ill-conditioning that plague all global RBF methods \cite{Divo2007}. The ill-conditioning is reduced if each domain is treated as a separate RBF domain, and the boundary update is treated separately. Domain decomposition methods for RBFs were introduced by Beatson et al. \cite{Beatson2000} in the year 2000 as a way to increase problem sizes into the millions of nodes.
+
+Divo and Kassab \cite{Divo2007} used a domain decomposition method with artificial 
+subdomain boundaries for their implementation of a local collocation method \cite{Divo2007}. 
+Subdomains are processed independently. The derivative values 
+at artificial boundary points are averaged to maintain global consistency of physical values. Their implementation 
+was designed for a 36 node cluster, but benchmarks and scalability tests are not provided.
+
+% Divo: it seems almost unnecessary to use domain decomposition if they have the local method.
+% I suppose the domain decomposition is necessary for averaging physical values more than RBF collocation.
+
+Kosec and \v{S}arler \cite{Kosec2008} used OpenMP to parallelize coupled heat transfer 
+and fluid flow problems on a single workstation. 
+Their test cases used local collocation, explicit time-stepping and Neumann boundary conditions. A speedup 
+factor of 1.85x over serial execution was achieved by executing on two CPU cores; no 
+results from scaling tests were provided. 
+
+Stevens et al. \cite{Stevens2009a} mention a parallel implementation under development, but no document is available yet. 
+
+%TODO Additional RBF implementations are discussed at the end of this chapter in the context of parallel co-processing with the GPU. 
+
+In this work, we will add to the above experiences, with the added twist of incorporating an implementation on the GPU (see later chapters). 
+
+
+RBFs on GPU work: \cite{Schmidt2009a, Schmidt2009b} (global), \cite{Yokota2010} (compact)
+Multi-GPU Jacobi iteration for Navier stokes flow in cavity \url{http://scholarworks.boisestate.edu/cgi/viewcontent.cgi?article=1003&context=mecheng_facpubs}
+
+We are investigating optimizations that target both GPUs and Phi cards for a class of numerical methods based on Radial Basis Functions (RBFs) to solve Partial Differential Equations. RBF methods are increasingly popular across disciplines due to their low complexity, natural ability to function in higher dimension with minimal requirements for an underlying mesh, and high-order---in many cases, spectral---accuracy. RBF methods can be viewed as generalizations of many traditional methods such as Finite Difference and Finite Element to allow for truly unstructured grids. This generalization allows one to reuse many of the same techniques (e.g., sparse matrices, iterative solvers, domain decompositions, etc.) to efficiently obtain solutions. The variety of hardware available on Cascade will help us establish a clear argument in the choice of accelerator type and resolve the dilemma between choosing Phi vs GPU for our method. Since RBFs generalize other methods, our results should have broad reaching impact to answer similar questions for related methods.
+
+
+
+With the generalization of RBF-FD derivative computation formulated as a sparse matrix multiplication, we can 
+% TODO: mention CUSP as alternative but concentrate on VCL
+consider the various sparse formats provided by CUSP and ViennaCL. 
+
+%TODO later: \item All stencils with non-uniform size
+%TODO: What is the optimal choice of sparse container? How do the sparse containers compare in performance to each other, and to our custom kernels? What can we conclude? 
+
+Compare formats: 
+\begin{itemize}
+\item ELL
+\item COO
+\item CSR
+\item Other formats such as HYB, JAD, DIA are considered on the GPU
+\end{itemize}
+
+How is communication overlap handled with each format? 
+
+
+Conclude: sparse containers allow increased efficiency compared to our custom kernels. The custom kernels compete with CSR and COO. 
+
+
+From the definition of RBF-FD we can formulate the problem computationally in two ways. First, stencil operations are independent. Therefore, we can write kernels with perfect parallelism by dedicating a single thread per stencil or a group of threads per stencil.  
+
+Unfortunately, perfect concurrency does not imply perfect or even ideal concurrency on the GPU. 
+
+We first demonstrate the case where one thread is dedicated to each stencil. This is followed by dedicating a group of thread to the stencil. In each case we are operating under the assumption that each stencil is independent on the GPU. 
+
+To further optimize RBF-FD on the GPU, we formulate the problem in terms of a Sparse Matrix-Vector Mulitply (SpMV). When we consider the problem in this light we generate a single Differentiation Matrix that can see two optimizations not possible with our stencil-based view: 
+\begin{itemize} 
+\item First, the sparse containers used in SpMV allow for their own unique optimizations to compress storage and leverage hardware cache.
+\item Evaluation of multiple derivatives can be accumulated by association into one matrix operation. This reduces the total number of floating point operations required per iteration. 
+\end{itemize}
+
+
+
+We compare the performance of our custom kernel to ViennaCL kernels (ELL, CSR, COO, HYB, DIAG), UBlas (COO, CSR) and Eigen (COO, CSR, ELL)
+
+
 
 \chapter{Distributed Solver}
 \label{sec:rbffd_gpu}
