--- a/latex/future_of_gpus.tex
+++ b/latex/future_of_gpus.tex
@@ -1,3 +1,4 @@
+
 \makeatletter
 \@ifundefined{standalonetrue}{\newif\ifstandalone}{}
 \@ifundefined{section}{\standalonetrue}{\standalonefalse}
@@ -6,6 +7,7 @@
 \documentclass{report}
 
 \input{all_usepackages} 
+\usepackage[margin=1.25in]{geometry}
 
 \begin{document}
 \fi
