--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,23 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-06-14 05:26:35 -0500 
+%% Created for Evan Bollig at 2013-07-29 04:12:51 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Cuomo2013,
+	Author = {Salvatore Cuomo and Ardelio Gallettiy and Giulio Giuntay and Alfredo Staracey},
+	Bibsource = {DBLP, http://dblp.uni-trier.de},
+	Date-Added = {2013-07-29 09:12:44 +0000},
+	Date-Modified = {2013-07-29 09:12:51 +0000},
+	Ee = {http://arxiv.org/abs/1305.5179},
+	Journal = {CoRR},
+	Title = {Surface Reconstruction from Scattered Point via RBF Interpolation on GPU},
+	Volume = {abs/1305.5179},
+	Year = {2013}}
 
 @misc{Womersley2001,
 	Author = {Robert S. Womersley and Ian H Sloan},
