--- a/latex/distributed_solver.tex
+++ b/latex/distributed_solver.tex
@@ -12,6 +12,50 @@
 \begin{document}
 \fi
 
+
+\chapter{A Distributed Multi-GPU RBF-FD Implementation}
+\label{chap:rbffd_multi_gpu}
+\authnote{Move this to introduction of thesis and related work.} 
+
+%\authnote{Related work for start of Parallel/GPU chapter}
+Parallel implementations of RBF methods rely on domain decomposition. Depending on the implementation, domain decomposition not only accelerates solution procedures, but can decrease the ill-conditioning that plague all global RBF methods \cite{Divo2007}. The ill-conditioning is reduced if each domain is treated as a separate RBF domain, and the boundary update is treated separately. Domain decomposition methods for RBFs were introduced by Beatson et al. \cite{Beatson2000} in the year 2000 as a way to increase problem sizes into the millions of nodes.
+
+This work leverages a domain decomposition, but not for the purpose of conditioning. Instead the focus is on decomposing the domain in order to scale RBF-FD across more than a thousand CPU cores of an HPC cluster. Add to this the twist of incorporating a novel implementation on the GPU with overlapping communication and computation. This combination is unmatched in related work. However, RBF methods do have a bit of history of parallel implementations. 
+
+In 2007, Divo and Kassab \cite{Divo2007} used a domain decomposition method with artificial 
+subdomain boundaries for their implementation of a local collocation method \cite{Divo2007}. 
+The subdomains are processed independently, with derivative values 
+at artificial boundary points averaged to maintain global consistency of physical values. Their implementation 
+was designed for a 36 node cluster, but benchmarks and scalability tests are not provided.
+
+% Divo: it seems almost unnecessary to use domain decomposition if they have the local method.
+% I suppose the domain decomposition is necessary for averaging physical values more than RBF collocation.
+
+
+Kosec and \v{S}arler \cite{Kosec2008} have the only known (to our knowledge) OpenMP implementation for RBFs. The authors parallelize coupled heat transfer 
+and fluid flow problems on a single workstation. 
+The application involves the local RBF collocation method, explicit time-stepping and Neumann boundary conditions. A speedup 
+factor of 1.85x over serial execution was achieved by executing on two CPU cores; no further 
+results from scaling tests were provided. 
+
+Stevens et al. \cite{Stevens2009a} mention a parallel implementation under development, but no document is available at this time. 
+
+Perhaps the most competitive parallel implementation of RBFs is the PetRBF \cite{Yokota2010} branch of PETSc \cite{PETSc}. The authors of PetRBF (also developers for PETSc) have implemented a highly scalable, efficient RBF interpolation method based on compact RBFs (i.e., they operate on sparse matrices). The authors demonstrate efficient weak scaling of PetRBF across 1024 processes on a Blue Gene/L, and strong scaling up to 128 processes on the same hardware. Additionally, strong scaling was tested on a Cray XT4. On the Blue Gene/L, PetRBF is demonstrated to achieve an impressive 74\% parallel weak scaling efficiency on 1024 processes (operating on over 50 million points), and 84\% strong scaling efficiency for 128 processes. For the Cray XT4, strong scaling tops out at 36\% for 128 processes, a respectable number---and similar to observed results for our own code on 128 processes.  
+
+%TODO Additional RBF implementations are discussed at the end of this chapter in the context of parallel co-processing with the GPU. 
+
+Related work on RBFs and GPUs is sparse. In 2009, Schmidt et al. \cite{Schmidt2009a, Schmidt2009b} implemented a global RBF method for Tsunami simulation on the GPU using the AccelerEyes Jacket \cite{JacketGuide2009} add-on for MATLAB. Jacket provides a MATLAB interface to data structures and routines that internally call to the NVidia CUDA API. Their model was based on a single large dense matrix solve, and with the help of Jacket the authors were able to achieve approximately 7x speedup over the standard MATLAB solution on the then current generation of the MacBook Pro laptop. The authors compared the laptop CPU (processor details not specified) to the built-in NVidia GeForce 8600M GT GPU. Schmidt et al.'s implementation was the first contribution to the RBF community to leverage accelerators. The results were significant and promising, but no further contributions were made on the topic. 
+
+While both Schmidt et al.'s method and our's are based on RBFs, the two problems are only distantly related when it comes to implementation on the GPU. Dense matrix operations have a high computational complexity, are considered ideal (or near to) by linear algebra libraries like BLAS \cite{BLAS} and LAPACK \cite{Lapack1999}, and were demonstrated to fit well on GPUs from the onset of General Purpose GPU (GPGPU) Computing. In fact, NVidia included CUBLAS \cite{CUBLAS} (a GPU based BLAS library for their hardware) with their initial public release of the game-changing CUDA development kit in 2006. In stark contrast to this, sparse matrix operations have minimal computational complexity and are less than ideal for the GPU.
+
+
+Earlier this year (2013), Cuomo et al. \cite{Cuomo2013} implemented RBF-interpolation on the GPU for surface reconstruction. Their implementation utilizes PetRBF \cite{Yokota2010}, and new built-in extensions that allow GPU access within PETSc. PETSc internally wraps the CUSP project \cite{CUSP} for sparse matrix algebra on the GPU. With the help of these libraries, Cuomo et al. solve and apply sparse interpolation systems on the GPU for up to three million nodes on an NVidia Fermi C1060 GPU (4GB). They compare results to a single core CPU implementation on an Intel i7-940 CPU and demonstrate that the GPU accelerate their solutions between 6x and 25x. Unfortunately, the authors do not show evidence of scaling the interpolation across multiple GPUs; so while evidence exists that PetRBF now has full GPU support, it remains to be seen how well the code can scale in GPU mode. 
+ 
+ 
+Multi-GPU Jacobi iteration for Navier stokes flow in cavity \url{http://scholarworks.boisestate.edu/cgi/viewcontent.cgi?article=1003&context=mecheng_facpubs}
+
+Thibault et al. have multiple works on Multi-GPU and overlapping comm and comp. 
+
 \chapter{GPU SpMV}
 
 \section{Related Work}
@@ -69,45 +113,6 @@ Our assumption with RBF-FD in this manuscript is that all stencils will have equ
  
 
 
-\chapter{A Distributed Multi-GPU RBF-FD Implementation}
-\label{chap:rbffd_multi_gpu}
-
-%\authnote{Related work for start of Parallel/GPU chapter}
-Parallel implementations of RBF methods rely on domain decomposition. Depending on the implementation, domain decomposition not only accelerates solution procedures, but can decrease the ill-conditioning that plague all global RBF methods \cite{Divo2007}. The ill-conditioning is reduced if each domain is treated as a separate RBF domain, and the boundary update is treated separately. Domain decomposition methods for RBFs were introduced by Beatson et al. \cite{Beatson2000} in the year 2000 as a way to increase problem sizes into the millions of nodes.
-
-This work leverages a domain decomposition, but not for the purpose of conditioning. Instead the focus is on decomposing the domain in order to scale RBF-FD across more than a thousand CPU cores of an HPC cluster. Add to this the twist of incorporating a novel implementation on the GPU with overlapping communication and computation. This combination is unmatched in related work. However, RBF methods do have a bit of history of parallel implementations. 
-
-In 2007, Divo and Kassab \cite{Divo2007} used a domain decomposition method with artificial 
-subdomain boundaries for their implementation of a local collocation method \cite{Divo2007}. 
-The subdomains are processed independently, with derivative values 
-at artificial boundary points averaged to maintain global consistency of physical values. Their implementation 
-was designed for a 36 node cluster, but benchmarks and scalability tests are not provided.
-
-% Divo: it seems almost unnecessary to use domain decomposition if they have the local method.
-% I suppose the domain decomposition is necessary for averaging physical values more than RBF collocation.
-
-
-Kosec and \v{S}arler \cite{Kosec2008} have the only known (to our knowledge) OpenMP implementation for RBFs. The authors parallelize coupled heat transfer 
-and fluid flow problems on a single workstation. 
-The application involves the local RBF collocation method, explicit time-stepping and Neumann boundary conditions. A speedup 
-factor of 1.85x over serial execution was achieved by executing on two CPU cores; no further 
-results from scaling tests were provided. 
-
-Stevens et al. \cite{Stevens2009a} mention a parallel implementation under development, but no document is available at this time. 
-
-Perhaps the most competitive parallel implementation of RBFs is the PetRBF \cite{Yokota2010} branch of PETSc \cite{PETSc}. The authors of PetRBF (also developers for PETSc) have implemented a highly scalable, efficient RBF interpolation method based on compact RBFs (i.e., they operate on sparse matrices). The authors demonstrate efficient weak scaling of PetRBF across 1024 processes on a Blue Gene/L, and strong scaling up to 128 processes on the same hardware. Additionally, strong scaling was tested on a Cray XT4. On the Blue Gene/L, PetRBF is demonstrated to achieve an impressive 74\% parallel weak scaling efficiency on 1024 processes (operating on over 50 million points), and 84\% strong scaling efficiency for 128 processes. For the Cray XT4, strong scaling tops out at 36\% for 128 processes, a respectable number---and similar to observed results for our own code on 128 processes.  
-
-%TODO Additional RBF implementations are discussed at the end of this chapter in the context of parallel co-processing with the GPU. 
-
-Related work on RBFs and GPUs is sparse. In 2009, Schmidt et al. \cite{Schmidt2009a, Schmidt2009b} implemented a global RBF method for Tsunami simulation on the GPU using the AccelerEyes Jacket \cite{JacketGuide2009} add-on for MATLAB. Jacket provides a MATLAB interface to data structures and routines that internally call to the NVidia CUDA API. Their model was based on a single large dense matrix solve, and with the help of Jacket the authors were able to achieve approximately 7x speedup over the standard MATLAB solution on the then current generation of the MacBook Pro laptop. The authors compared the laptop CPU (processor details not specified) to the built-in NVidia GeForce 8600M GT GPU. Schmidt et al.'s implementation was the first contribution to the RBF community to leverage accelerators. The results were significant and promising, but no further contributions were made on the topic. 
-
-While both Schmidt et al.'s method and our's are based on RBFs, the two problems are only distantly related when it comes to implementation on the GPU. Dense matrix operations have a high computational complexity, are considered ideal (or near to) by linear algebra libraries like BLAS \cite{BLAS} and LAPACK \cite{Lapack1999}, and were demonstrated to fit well on GPUs from the onset of General Purpose GPU (GPGPU) Computing. In fact, NVidia included CUBLAS \cite{CUBLAS} (a GPU based BLAS library for their hardware) with their initial public release of the game-changing CUDA development kit in 2006. In stark contrast to this, sparse matrix operations have minimal computational complexity and are less than ideal for the GPU.
-
-
-Earlier this year (2013), Cuomo et al. \cite{Cuomo2013} implemented RBF-interpolation on the GPU for surface reconstruction. Their implementation utilizes PetRBF \cite{Yokota2010}, and new built-in extensions that allow GPU access within PETSc. PETSc internally wraps the CUSP project \cite{CUSP} for sparse matrix algebra on the GPU. With the help of these libraries, Cuomo et al. solve and apply sparse interpolation systems on the GPU for up to three million nodes on an NVidia Fermi C1060 GPU (4GB). They compare results to a single core CPU implementation on an Intel i7-940 CPU and demonstrate that the GPU accelerate their solutions between 6x and 25x. Unfortunately, the authors do not show evidence of scaling the interpolation across multiple GPUs; so while evidence exists that PetRBF now has full GPU support, it remains to be seen how well the code can scale in GPU mode. 
- 
- 
-Multi-GPU Jacobi iteration for Navier stokes flow in cavity \url{http://scholarworks.boisestate.edu/cgi/viewcontent.cgi?article=1003&context=mecheng_facpubs}
 
 We are investigating optimizations that target both GPUs and Phi cards for a class of numerical methods based on Radial Basis Functions (RBFs) to solve Partial Differential Equations. RBF methods are increasingly popular across disciplines due to their low complexity, natural ability to function in higher dimension with minimal requirements for an underlying mesh, and high-order---in many cases, spectral---accuracy. RBF methods can be viewed as generalizations of many traditional methods such as Finite Difference and Finite Element to allow for truly unstructured grids. This generalization allows one to reuse many of the same techniques (e.g., sparse matrices, iterative solvers, domain decompositions, etc.) to efficiently obtain solutions. The variety of hardware available on Cascade will help us establish a clear argument in the choice of accelerator type and resolve the dilemma between choosing Phi vs GPU for our method. Since RBFs generalize other methods, our results should have broad reaching impact to answer similar questions for related methods.
 
@@ -153,35 +158,54 @@ We compare the performance of our custom kernel to ViennaCL kernels (ELL, CSR, C
 
 
 \chapter{Distributed Solver}
-\label{sec:rbffd_gpu}
+\label{chap:distributed_rbffd}
 
-Distributed application of RBF-FD requires three
+Parallelizing RBF-FD in a distributed environment requires three
 design decisions \cite{Saad2003}. First, the problem is partitioned in some fashion to distribute work across multiple processes. Intelligent partitioning
 impacts load balancing of processors and the ratio of computation versus communication; imbalanced computation can result in excessive delay per
-iteration as some processors tackle larger problem sizes while others sit idle, waiting on information. Second, one must determine whether processes have access to all or a subset of node information,
-solution values, etc. and establish index mappings that translate between a local context and the global problem. Last but not least, the local ordering  processor can re-order nodes locally in an
-effort to improve solver efficiency and local system conditioning. Node
+iteration as some processors tackle larger problem sizes with others sitting idle. Second, one must determine whether processes have access to all or a subset of node information,
+solution values, etc. and establish index mappings that translate between a local context and the global problem. Third, the local ordering of indices is established to improve solver efficiency and/or simplify operations. Node
 ordering is also significant in the future discussion of offloading computation to GPUs as it can help to minimize data transfer between CPU and GPU. 
 
+The following sections detail the approach to distributed computing and a few optimizations that allow RBF-FD to scale over a thousand processes. In later chapters these same decisions will tie into the resulting performance of the distributed multi-GPU implementations. 
 
-Parallelization of the RBF-FD method is achieved at two levels. First, the
-physical domain of the problem\hl{---in this case, the unit sphere---}is partitioned
-into overlapping subdomains, each handled by a different CPU process. All CPUs
-operate independently to compute/load RBF-FD stencil weights, run diagnostic
-tests and perform other initialization tasks. A CPU computes only weights
-corresponding to stencils centered in the interior of its partition. After
-initialization, CPUs continue concurrently to solve the PDE. Communication
-barriers ensure that the CPUs execute in lockstep to maintain consistent
-solution values in regions where partitions overlap.  The second level of
-parallelization offloads time-stepping of the PDE to the GPU.  Evaluation of
-the right hand side of Equation~(\ref{eq:evaluation_with_hyperviscosity}) is
-data-parallel: the solution derivative at each stencil center is evaluated
-independently of the other stencils. This maps well to the GPU, offering decent
-speedup even in unoptimized kernels. Although the stencil weight calculation is
-also data-parallel, we assume that in this context that the weights are
-precomputed and loaded once from disk during the initialization phase. 
+\section{Test Case}
+
+To test scaling of our method, we consider an idealized regular grid in three dimensions. 
+
+verification here is only significant to ensure we are applying all weights. 
+We apply weights to calculate derivatives of a test function in X, Y, Z, and the Laplacian. 
+the grid is regular and 3D.
+We test strong scaling on a $N=160^3$ grid, and weak scaling with $N_p=4000$. This way at $p=1024$ processes we have weak scaling testing the full $N=160^3$ grid. 
+
+%
+%
+%
+%\section{Next}
+%
+%Parallelization of RBF-FD is achieved at two levels. First, the
+%physical domain of the problem is partitioned
+%into overlapping subdomains, each handled by a different MPI process. All CPUs
+%operate independently to compute/load RBF-FD stencil weights, run diagnostic
+%tests and perform other initialization tasks. A CPU computes only weights
+%corresponding to stencils centered in the interior of its partition. After
+%initialization, CPUs continue concurrently to solve the PDE. Communication
+%barriers ensure that the CPUs execute in lockstep to maintain consistent
+%solution values in regions where partitions overlap.  The second level of
+%parallelization offloads time-stepping of the PDE to the GPU.  Evaluation of
+%the right hand side of Equation~(\ref{eq:evaluation_with_hyperviscosity}) is
+%data-parallel: the solution derivative at each stencil center is evaluated
+%independently of the other stencils. This maps well to the GPU, offering decent
+%speedup even in unoptimized kernels. Although the stencil weight calculation is
+%also data-parallel, we assume that in this context that the weights are
+%precomputed and loaded once from disk during the initialization phase. 
 
 %TODO: Need partitioning, global and local index maps, and local ordering for a distributed matrix operation \cite{Saad2003} 
+
+\section{Node Sets}
+
+
+
 
 \section{Partitioning}
 
@@ -195,7 +219,11 @@ overlap regions where nodes in sets $\mathcal{O}$ and $\mathcal{R}$ (i.e., nodes
 requiring MPI communication) reside. As stencil size increases, the width of the
 overlap regions relative to total number of nodes on the sphere also increases. 
 
-\authnote{Q: what is the percentage overlap for $n$? $\frac{1}{2} n^{\frac{1}{d}}$ gives depth into neighbor since n is uniformly sampled we expect a cube shape. (SHould be literature on this...no?)} % assume sphere, sqrt of N for scaling area covered by stencil}
+Thibault et al. \cite{Thibault200*} use a linear partitioning in the $z$-direction. 
+
+Linear partitioning is not ideal for the sphere. 
+
+%TODO: what is the percentage overlap for $n$? $\frac{1}{2} n^{\frac{1}{d}}$ gives depth into neighbor since n is uniformly sampled we expect a cube shape. (SHould be literature on this...no?)} % assume sphere, sqrt of N for scaling area covered by stencil
 
 
 The linear partitioning in Figure~\ref{fig:decomposed_sphere} was chosen for ease of implementation. Communication is limited for each
@@ -343,6 +371,7 @@ As the set $\setDepend$ is received, the CPU converts back from global to local 
 		By scalable here we imply total problem size and processor count. The performance scalability of the code depends on the problem size and the MPI collective. In Figure~\ref{fig:strong_scaling} the strong scaling of $N=10^6$ nodes is tested on Itasca, a supercomputer at the Minnesota Supercomputing Institute.   
 
 \section{Communication Collectives} 
+
 MPI collectives allow information sharing between processes. Our code leverages three collectives: MPI\_Alltoall, MPI\_Alltoallv and MPI\_Isend/MPI\_Irecv. 
 
 The collective operation is essentially transposing information as seen in Figure~\ref{fig:mpi_alltoallv_visual}. 
@@ -374,6 +403,32 @@ The actual implementation of MPI\_Alltoall and MPI\_Alltoallv likely use Isend a
 \end{figure}
 
 MPI\_Isend/MPI\_Irecv also allows for overlapping communication and computation by posting receives early 
+
+\subsection{Alltoallv}
+As a baseline for scaling we start with MPI\_Alltoallv. 
+
+\authnote{figure: alltoall visual} 
+
+\subsection{Isend/Irecv}
+
+The first improvement on Alltoallv collectives is to truncate the number of connections made between processes. Compact stencils implies an overlap region for each processor that draws values from a limited number of neighboring processors. 
+
+\authnote{figure: isend visual}
+
+\subsection{No Decode}
+\authnote{figure: per iteration stacked bar for n=50 and 16 processes to show cost of decode}
+\authnote{figure: algorithm for collective}
+
+\authnote{figure: alltoall to isend improvement. justify comm\_combo for up to 16 procs.} 
+\authnote{figure: comm\_combo gains}
+\authnote{figure: algorithm for collective}
+
+\subsection{Immediate Isend on Encode}
+\authnote{figure: algorithm for collective}
+
+\authnote{back to section: figure: improvement on all CPU collectives (n=50)}
+
+\authnote{table: show percentage of comm time for actual mpi time. busy network can cause slower comm times. but the decode cost is gone. it can also be an issue if we have saturated comm pipes}
 
 
 
